# go-upload-server

./: CHANGELOG  Cargo.toml  README.md
.github/workflows/: build-package.yml
debian/: go-upload-server.service
src/: main.rs
